fixed contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,33 @@
 body {
-  background-color: black;
+  background-color:#4A4F46;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .container {
-  background-color: brown;
-  min-height: 100vh;
-  width: 80%;
+  /* position: absolute;
+  top: 0px; */
+  width: 70%;
   display: flex;
   flex-direction: row;
 }
 
 .profile {
-  flex: 3;
+  flex: 3.3;
   background-color: #282c34;
   display: flex;
   flex-direction: column;
   color: white;
   text-align: left;
   padding: 15px;
+  min-width: 300px;
 }
 
 .detailscontainer {
+  min-width: 200px;
   background-color: #ffffff;
-  flex: 7;
+  flex: 6.7;
   display: flex;
   flex-direction: column;
 }
@@ -43,15 +45,21 @@ body {
     height: 20px;
     width: 20px;
     margin-right: 10px;
+    color: white;
 }
-
+.imgcontainer{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 220px;
+}
 .img {
   max-height: 200px;
   max-width: 200px;
   border-radius: 100px;
-  margin-top: 30px;
-  align-self: center;
 }
+
 .profile h1 {
   align-self: center;
   margin-bottom: 0px;
@@ -61,26 +69,30 @@ body {
     text-decoration: none;
 }
 .profile a:hover{
-    color:green;
+    color:#c9cac5;
 }
 .profile p {
   align-self: center;
   margin-top: 0px;
   font-size: 16px;
 }
-
+.profile ul{
+  padding:0;
+  margin: 0;
+}
 .profile li{
+  list-style-type: none;
     margin-top: 7px;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
-
+    align-items: flex-start;
 }
 .profile h3 , .detailscontainer h3{
   font-family: sans-serif;
   text-decoration: underline solid;
   text-underline-offset: 3px;
   text-decoration-thickness: 3px;
+  margin-top: 15px;
 }
 
 .detailscontainer p{
